RESOLVED FIXED53999
Occasional assertion failures in RunLoop::TimerBase::timerFired
https://bugs.webkit.org/show_bug.cgi?id=53999
Summary Occasional assertion failures in RunLoop::TimerBase::timerFired
Adam Roben (:aroben)
Reported 2011-02-08 06:52:54 PST
Occasional assertion failures in RunLoop::TimerBase::timerFired
Attachments
Patch (1.88 KB, patch)
2011-02-08 06:54 PST, Adam Roben (:aroben)
darin: review+
Adam Roben (:aroben)
Comment 1 2011-02-08 06:54:46 PST
Adam Roben (:aroben)
Comment 2 2011-02-08 08:03:47 PST
Note You need to log in before you can comment on or make changes to this bug.