Handle WM_TIMER messages for stopped timers

Whenever we stop a timer, we call ::KillTimer to cancel any future firings of the timer. But
::KillTimer doesn't do anything about WM_TIMER messages that have already been posted to the
message queue. We need to handle those, too.

Fixes <http://webkit.org/b/53999> Occasional assertion failures in
RunLoop::TimerBase::timerFired

Reviewed by Darin Adler.

* Platform/win/RunLoopWin.cpp:
(RunLoop::TimerBase::timerFired): Just bail if the timer has already been stopped.

Canonical link: https://commits.webkit.org/67998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77939 268f45cc-cd09-0410-ab3c-d52691b4dbfc